compiler/e2e/test/snapshot/memory_checker/move_to_do_closure/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
  [error]: the value is used after it has been moved
    ╭─[compiler/e2e/test/snapshot/memory_checker/move_to_do_closure/main.pnx:22:5]
 21 │     
 22 │     do: # the `nonCopyable` is moved here
    ·     ─┬
    ·      ╰── the value was moved here for closure capture
 23 │         drop(nonCopyable)
 24 │     
 25 │     with Test:
 26 │         doSomething():
 27 │             pass
 28 │ 
 29 │     # error: use of moved value `nonCopyable`
 30 │     drop(nonCopyable)
    ·          ─────┬─────
    ·               ╰── 
    ╰────

  [error]: Compilation aborted due to 1 error(s)



stdout:
